@@ -489,8 +489,7 @@ class InsertFromValuesAnalyzer extends AbstractInsertAnalyzer {
             valueSymbol = context.normalizer.normalize(valueSymbol, context.transactionContext);
             if (valueSymbol.symbolType() == SymbolType.LITERAL) {
                 Object value = ((Input) valueSymbol).value();
-                if (primaryKey.contains(reference.ident().columnIdent()) &&
-                    context.analyzedStatement.columns().indexOf(reference) == -1) {
+                if (primaryKey.contains(reference.ident().columnIdent())) {
                     int idx = primaryKey.indexOf(reference.ident().columnIdent());
                     addPrimaryKeyValue(idx, value, context.primaryKeyValues);
                 }
